ingress/cowsay/ingress.yaml

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cowsay-service
spec:
  ingressClassName: nginx  # Assuming you have Nginx Ingress Controller deployed
  rules:
  - host:  aditya.k8s.com # Optional: Specify a hostname to access your application (e.g., your-app.com)
    http:
      paths:
      - path: /docker/  # Matches all paths
        pathType: Prefix  # Only consider paths starting with "/"
        backend:
          service:
            name: cowsay-service
            port: 
              number: 80
